--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  		<title>vinay</title>
+  		<title>RAPYDER</title>
 <!-- 
 
 Highway Template
@@ -41,7 +41,7 @@ https://templatemo.com/tm-520-highway
         <div class="video-overlay"></div>
         <div class="video-content">
             <div class="inner">
-              <h1>Welcome to <em>Highway</em></h1>
+              <h1>Welcome to <em>VINAY</em></h1>
               <p>FREE CSS TEMPLATE by templatemo</p>
               <p>Homepage with full-width image gallery</p>
                 <div class="scroll-icon">
